# GreenSloth

./: .gitignore  .pre-commit-config.yaml  README.md  head.php  hello.txt  index.html  news.html  package-lock.json  package.json  startpublic.sh  vite.config.js  vite.config.ts
models/: comps_glossary.csv  pixi.toml  pyproject.toml  rates_glossary.csv
models/.pixi_envs/modelbase1/: pixi.toml
models/.pixi_envs/modelbase2/: pixi.toml
models/Bellasio2019/: README.md  README_script.py
models/Bellasio2019/figures/: demonstrations.ipynb  paper_figures.ipynb
models/Bellasio2019/model/: __init__.py  basic_funcs.py  derived_quantities.py  model.py  mxlbrickswriter.py  rates.py
models/Bellasio2019/model_info/: .~lock.derived_comps.csv#  comps.csv  derived_comps.csv  derived_params.csv  params.csv  rates.csv
models/Bellasio2019/paper_figures/: paper_figures.ipynb
models/Ebenhoeh2011/: README.md  main.ipynb  paper_figures.ipynb
models/Ebenhoeh2011/model/: __init__.py  basic_funcs.py  derived_parameters.py  derived_quantities.py  pyproject.toml  rates.py  simulations.py
models/Fuente2024/: README.md  README_script.py  test.py
models/Fuente2024/figures/: demonstrations.ipynb  paper_figures.ipynb
models/Fuente2024/model/: __init__.py  basic_funcs.py  derived_quantities.py  model.py  mxlbrickswriter.py  rates.py
models/Fuente2024/model_info/: comps.csv  derived_comps.csv  derived_params.csv  params.csv  rates.csv
models/Kirschbaum1998/: Stomatal_conductance.py  pixi.toml
models/Li2021/: README.md  README_script.py
models/Li2021/figures/: demonstrations.ipynb  paper_figures.ipynb
models/Li2021/model/: __init__.py  basic_funcs.py  derived_quantities.py  li2021.py  rates.py  writer.py
models/Li2021/model_info/: comps.csv  derived_comps.csv  derived_params.csv  model_params.csv  params.csv  rates.csv
models/Li2021/paper_figures/: figure_recreation.ipynb
models/Matuszynska2016/: M16model.py  README.md  README_script.py  npqmodel-Matuszynska-et-al.-2016.ipynb  parameters.py  pixi.toml  pyproject.toml
models/Matuszynska2016/figures/: demonstrations.ipynb  paper_figures.ipynb
models/Matuszynska2016/model/: __init__.py  basic_funcs.py  derived_quantities.py  main.ipynb  rates.py
models/Matuszynska2016/model_info/: comps.csv  derived_comps.csv  derived_params.csv  params.csv  rates.csv
models/Matuszynska2016/paper_figures/: paper_figures.ipynb
models/Matuszynska2016_old/: misc.py  parameters.py  pixi.toml
models/Matuszynska2016_old/model_info/: derived_comps.csv
models/Poolman2000/model/: __init__.py  create_from_bricks.py  derived_quantities.py  rates.py
models/Saadat2021/: .flake8  .gitignore  .mypy.ini  README.md  README_script.py  main.ipynb  pixi.toml  pyproject.toml  test.py
models/Saadat2021/analyses/: 1d-parameter-scans.ipynb  2d-parameter-scans.ipynb  controlCoefficients.ipynb  fig1-electron-flux-distribution.ipynb  gsa.ipynb  npq-analysis-anna.ipynb  npq-analysis-oliver.ipynb  thioredoxin-scan.ipynb
models/Saadat2021/analyses-paper/: main.ipynb  supplementary-gsa.ipynb  supplementary.ipynb
models/Saadat2021/figures/: demonstrations.ipynb  paper_figures.ipynb
models/npqmodel-2016-master/: .gitignore  M16model.py  README.md  README_script.py  misc.py  npqmodel-Matuszynska-et-al.-2016.ipynb
(+559 files in other folders)
