[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "GreenSloth"
dependencies = [
    "mdutils",
    "ipykernel",
    "ruff",
    "mxlbricks",
    "neonutilities",
    "lmfit", "mxlpy>=0.30.0,<0.31",
]
requires-python = ">=3.13,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
GreenSlothUtils = { path = "../../GreenSlothUtils/", editable = true }

[tool.pixi.tasks]
remove-diffrax = "pip uninstall diffrax"

[tool.pixi.dependencies]
assimulo = ">=3.7.2,<4"
python = ">=3.13.2,<3.14"
pip = ">=25.3,<26"

[tool.bandit]
skips = ["B101", "B301", "B403", "B404", "B603", "B607"]

[tool.mypy]
disallow_untyped_defs = true
exclude = "tests/*.py"
ignore_missing_imports = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
reportMissingModuleSource = "none"

[tool.ruff]
indent-width = 4
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "ANN401",  # any
  "C901",    # too complex
  "COM812",  # missing trailing comma  # "D", # all of documenetation
  "D203",    # blank line before docstring
  "D213",    # multi-line summary first line
  "D401",    # first line should be in imperative mood
  "E501",    # line-too-long
  "ERA001",  # commented-out code
  "FIX001",  # line contains FIXME
  "ISC001",  # single line implicit string concat
  "N806",    # non-lowercase variable
  "PGH003",  # specific rule type ignore
  "S110",    # try-except-pass
  "S301",    # pickle usage
  "TD001",   # invalid todo tag
  "TD002",   # missing todo author
  "TD003",   # missing todo link
  "TD004",   # missing todo version
  "TD005",   # missing todo date
  "TRY003",  # raise vanilla args
  "PLR0912", # too many branches
  "PLR0911", # too many statements
  "PLR0913", # max num of arguments
  "PLR0915", # too many lines
  "PD010",   # pivot table
  "PT011",   # pytest.raises is too broad
  "RUF022",  # unsorted all
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "T201", # print statements
  "D",    # all of documentation
]
