[tool.black]
line-length = 110
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
import_heading_stdlib = ""
import_heading_framework = ""
import_heading_firstparty = ""
import_heading_thirdparty = ""
import_heading_localfolder = ""
honor_noqa = true

[tool.pixi.project]
name = "Saadat2021"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
Saadat2021 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "*"
assimulo = "*"

[project]
dependencies = ["modelbase"]
